--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <link rel="stylesheet" href="style.css">
-<link rel="icon" href="mars.png" type="img/png">
+<link rel="icon" href="../assets/mars.png" type="img/png">
 <div class="sidebar">
-     <a href="dashboard.html" style="background: darkcyan;text-decoration: overline;">Dashboard</a><br><br>
+     <a href="/simpleazy" style="background: darkcyan;text-decoration: overline;">Dashboard</a><br><br>
      <div class="judul">Your Account</div><br>
-     <a href='profile.html'>profile</a><br><br>
-     <a href='tagih.html'>Tagih</a><br><br>
-     <a href='data.html'>lihat data</a><br><br>
+     <a href='/simpleazy/profile'>profile</a><br><br>
+     <a href='/simpleazy/tagih'>Tagih</a><br><br>
+     <a href='/simpleazy/data'>lihat data</a><br><br>
      <a href=''>statistik</a><br><br>
      <a href=''>aktivitas</a><br><br>
      <div class="lain">
           <div class="judul">Setting</div><br>
-          <a href='' style="background: blue">laporkan</a><br><br>
-          <a href='' style="background: red;">keluar</a><br><br>
+          <a href='/simpleazy' style="background: blue">laporkan</a><br><br>
+          <a href='/simpleazy' style="background: red;">keluar</a><br><br>
           <div class="out">
                <a href=''>What is the Simpleazy</a><br>
                <a href=''>rating us</a><br>
@@ -47,4 +47,4 @@
           <h1>enter code</h1><br>
           <input type="number" style="height: 50px;width:250px;font-size: 2rem;">
      </div><br>
-     <div class="hey"><img src="mars.png" alt=''></div>
+     <div class="hey"><img src="assets/mars.png" alt=''></div>
